# CudaKinectFluids

./: CMakeLists.txt  KinectFluids.sln  KinectFluids.vcxproj  KinectFluids.vcxproj.filters  KinectWrapper.cpp  KinectWrapper.h  README.md  VC10_win32_KinectFluids.bat  defines.h  fluidsGL.cpp  fluidsGL_kernels.cu  fluidsGL_kernels.cuh  fluidsGL_kernels.h  main.cpp
